--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.timothy.FirstSteps">
 
     <application
@@ -8,10 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".DynoQuiz">
-        </activity>
-        <activity android:name=".YouWon" />
+        android:theme="@style/AppTheme"
+        tools:replace="android:label">
         <activity
             android:name=".IWantToLearn"
             android:label="@string/title_activity_iwant_to_learn">
